--- a/index.html
+++ b/index.html
@@ -21,10 +21,22 @@
             <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
                 work. That's why I am learning and mastering web development. I will not stop until I become the Web
                 Development Hero.</p>
-            <a href="#" target="_blank">HIRE ME</a>
+            <a class="button-link" href="#" target="_blank">HIRE ME</a>
         </div>
         <div class="header-right header-half">
             <img src="images/jhankar.png" alt="">
+        </div>
+    </section>
+    <section class="dream-big">
+        <div class="header-half header-right">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="header-half dream-text">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics</p>
+            <a class="button-link" href="#">DOWNLOAD RESUME</a>
         </div>
     </section>
 </body>
