--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
             </div>
         </div>
     </section>
+    <footer>
+        <p style="text-align: center;">© Peter Parker 2023, a Programming Hero initiative. developer by Ashik</p>
+    </footer>
 </body>
 
 </html>
